created auth library

--- a/projects/auth/src/lib/forgot-password/forgot-password.component.html
+++ b/projects/auth/src/lib/forgot-password/forgot-password.component.html
@@ -2,7 +2,7 @@
     <div class="background-white mobile-full-screen mat-elevation-z2" style="padding: 80px" fxLayout="row" fxLayoutAlign="center center">
         <form [formGroup]="forgotPassForm" (ngSubmit)="sendEmail()" fxLayout="column" fxFlex="80" fxFlex.xs="100" fxLayoutAlign="space-around stretch">
             <div fxLayout="row" fxLayoutAlign="center center" style="margin-bottom: 50px">
-                <img src="forgotpassService.authConfig.main_image_url" [style.width.%]="!mediaObserver.isActive('xs') ? 70 : 100">
+                <img [src]="forgotPasswordService.authConfig.main_image_url" [style.width.%]="!mediaObserver.isActive('xs') ? 70 : 100">
             </div>
             <div fxLayout="column" fxLayoutAlign="stretch center">
                 <span class="mat-headline text-center">¿Has olvidado tu contraseña?</span>
