--- a/projects/auth/src/lib/reset-password/reset-password.component.html
+++ b/projects/auth/src/lib/reset-password/reset-password.component.html
@@ -2,7 +2,7 @@
     <div class="mobile-full-screen mat-elevation-z2" style=" padding: 80px" fxLayout="row" fxLayoutAlign="center center">
         <form name="resetPassForm" [formGroup]="resetPassForm" (ngSubmit)="sendResetPassword()" fxLayout="column" fxFlex="80" fxFlex.xs="100" fxLayoutAlign="space-around stretch">
             <div fxLayout="row" fxLayoutAlign="center center" style="margin-bottom: 50px">
-                <img src="/assets/images/multinexo_logotype_colored.svg">
+                <img [src]="resetPasswordService.authConfig.main_image_url">
             </div>
             <span class="mat-title text-center">¿Vamos a crear tu nueva contraseña?</span>
             <div fxLayout="column" fxLayoutAlign="center center">
