--- a/projects/auth/src/lib/guest-start/guest-start.component.html
+++ b/projects/auth/src/lib/guest-start/guest-start.component.html
@@ -11,7 +11,7 @@
             headerPosition="below"
             mat-stretch-tabs
             class="background-white tab-header-bottom"
-            appTabs
+            jamTabs
             [tabNames]="tab_names"
             [tabGroup]="tabGroup"
             dynamicHeight
@@ -19,10 +19,10 @@
             fxLaoyutAlign="stretch stretch"
             >
             <mat-tab label="Iniciar Sesión">
-                <app-login></app-login>
+                <auth-login></auth-login>
             </mat-tab>
             <mat-tab label="Regístrate">
-                <app-sign-up></app-sign-up>
+                <auth-sign-up></auth-sign-up>
             </mat-tab>
         </mat-tab-group>
     </div>
