--- a/projects/auth/src/lib/guest-start/login/login.component.html
+++ b/projects/auth/src/lib/guest-start/login/login.component.html
@@ -1,10 +1,10 @@
 <form fxLayout="column" fxLayoutAlign="space-around stretch" (ngSubmit)="goLogin()" [formGroup]="form" style="padding: 40px 0">
     <div fxLayout="row" fxLayoutAlign="center center" class="width-100" style="margin-bottom: 50px">
-        <img src="guestStartService.authConfig.main_image_url" [style.width.%]="!mediaObserver.isActive('xs') ? 70 : 100">
+        <img [src]="guestStartService.authConfig.main_image_url" [style.width.%]="!mediaObserver.isActive('xs') ? 70 : 100">
     </div>
     <div fxLayout="row" fxLayoutAlign="center start">
         <div fxFlex="80" fxFlex.xs="100" fxLayout="column">
-            <rs-formly-form-flex (change)="updateForm($event)" [form]="form" [fields]="fields" [model]="model" fxLayout="column" class="width-100"></rs-formly-form-flex>
+            <auth-formly-form-flex (change)="updateForm($event)" [form]="form" [fields]="fields" [model]="model" fxLayout="column" class="width-100"></auth-formly-form-flex>
             <div fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="16px">
                 <button mat-raised-button color="primary" class="width-100" type="submit">Entrar</button>
                 <a
