--- a/projects/auth/src/lib/guest-start/sign-up/sign-up.component.html
+++ b/projects/auth/src/lib/guest-start/sign-up/sign-up.component.html
@@ -1,10 +1,10 @@
 <form fxLayout="column" fxLayoutAlign="space-around stretch" (ngSubmit)="registerUser()" style="padding: 40px 0">
     <div fxLayout="row" fxLayoutAlign="center center" style="margin-bottom: 50px">
-        <img src="guestStartService.authConfig.main_image_url" [style.width.%]="!mediaObserver.isActive('xs') ? 70 : 100">
+        <img [src]="guestStartService.authConfig.main_image_url" [style.width.%]="!mediaObserver.isActive('xs') ? 70 : 100">
     </div>
     <div fxLayout="row" fxLayoutAlign="center start">
         <div fxFlex="80" fxFlex.xs="100">
-            <rs-formly-form-flex [form]="form" [fields]="fields" [model]="model" fxLayout="column" class="width-100"></rs-formly-form-flex>
+            <auth-formly-form-flex [form]="form" [fields]="fields" [model]="model" fxLayout="column" class="width-100"></auth-formly-form-flex>
             <div fxLayout="column" style="margin: 50px 0">
                 <button type="submit" [disabled]="!(this.form.valid && this.form.touched)" mat-raised-button color="primary">Registrarse ahora</button>
             </div>
