fixed lib errors

--- a/projects/auth/src/lib/guest-start/login/login.component.html
+++ b/projects/auth/src/lib/guest-start/login/login.component.html
@@ -9,7 +9,7 @@
                 <button mat-raised-button color="primary" class="width-100" type="submit">Entrar</button>
                 <a
                     [routerLink]="guestStartService.authConfig.routes.forgot_password.route"
-                    [queryParams]="guestStartService.authConfig.routes.forgot_password.queryParams || {}"
+                    [queryParams]="guestStartService.authConfig.routes.forgot_password.query_params || {}"
                     style="text-transform: none"
                     class="md-body-1"
                     >
