--- a/projects/auth/src/lib/guest-start/sign-up/sign-up.component.html
+++ b/projects/auth/src/lib/guest-start/sign-up/sign-up.component.html
@@ -5,6 +5,17 @@
     <div fxLayout="row" fxLayoutAlign="center start">
         <div fxFlex="80" fxFlex.xs="100">
             <auth-formly-form-flex [form]="form" [fields]="fields" [model]="model" fxLayout="column" class="width-100"></auth-formly-form-flex>
+            <mat-checkbox
+                matInput
+                required
+                *ngIf="guestStartService.authConfig.need_conditions"
+                name="conditions"
+                aria-label="Acepto los terminos y condiciones"
+                [(ngModel)]="accepted_conditions"
+                class="shorten">
+                <label style="word-wrap: break-word; white-space: normal;">Estoy de acuerdo con todos los
+                <a href="#">términos y condiciones del servicio.</a></label>
+            </mat-checkbox>
             <div fxLayout="column" style="margin: 50px 0">
                 <button type="submit" [disabled]="!(this.form.valid && this.form.touched)" mat-raised-button color="primary">Registrarse ahora</button>
             </div>
