--- a/projects/auth/src/lib/guest-start/login/login.component.scss
+++ b/projects/auth/src/lib/guest-start/login/login.component.scss
@@ -1,6 +1,6 @@
 $login-link: #000000b3;
 
-/deep/ dynamic-material-form .mat-form-field {
+::ng-deep dynamic-material-form .mat-form-field {
     width: 100%;
 }
 
