fix version and class

--- a/projects/auth/src/lib/forgot-password/forgot-password.component.scss
+++ b/projects/auth/src/lib/forgot-password/forgot-password.component.scss
@@ -1,7 +1,10 @@
 $white: #fff;
 
-.mobile-full-screen {
-    height: 100%;
+
+@media only screen and (max-width: 600px) {
+    .mobile-full-screen {
+        height: 100%;
+    }
 }
 
 .background-white {
