--- a/projects/auth/src/lib/guest-start/guest-start.component.html
+++ b/projects/auth/src/lib/guest-start/guest-start.component.html
@@ -4,7 +4,7 @@
         fxFlex.lt.md="100"
         fxLayout.sm="column"
         fxLayoutAlign.lt-md="start stretch"
-        class="mobile-full-screen"
+        class="mobile-full-screen width-100"
         [ngClass]="!mediaObserver.isActive('xs') && !mediaObserver.isActive('xs') ? 'mat-elevation-z2' : ''"
         >
         <mat-tab-group
