--- a/projects/auth/src/lib/guest-start/guest-start.component.scss
+++ b/projects/auth/src/lib/guest-start/guest-start.component.scss
@@ -15,6 +15,10 @@
     white-space: normal !important;
 }
 
+.width-100 {
+    width: 100%;
+}
+
 @media only screen and (max-width: 600px) {
     .mobile-full-screen {
         height: 100%;
