--- a/projects/auth/src/lib/guest-start/login/login.component.scss
+++ b/projects/auth/src/lib/guest-start/login/login.component.scss
@@ -8,6 +8,8 @@ a:hover {
     color: $login-link;
 }
 
-.mobile-full-screen {
-    height: 100%;
+@media only screen and (max-width: 600px) {
+    .mobile-full-screen {
+        height: 100%;
+    }
 }
