--- a/projects/auth/src/lib/reset-password/reset-password.component.scss
+++ b/projects/auth/src/lib/reset-password/reset-password.component.scss
@@ -1,3 +1,5 @@
-.mobile-full-screen {
-    height: 100%;
+@media only screen and (max-width: 600px) {
+  .mobile-full-screen {
+      height: 100%;
+  }
 }
