--- a/projects/auth/src/lib/guest-start/login/login.component.html
+++ b/projects/auth/src/lib/guest-start/login/login.component.html
@@ -26,6 +26,7 @@
                     fxLayout="column"
                     fxLayoutGap="16px"
                     [socialButtons]="social_buttons"
+                    (buttonClick)="socialLogin($event)"
                     >
                 </auth-social-buttons>
             </div>
