--- a/projects/auth/src/lib/guest-start/social-buttons/social-buttons.component.html
+++ b/projects/auth/src/lib/guest-start/social-buttons/social-buttons.component.html
@@ -1,4 +1,4 @@
 <button mat-button *ngFor="let button of socialButtons" (click)="emitButtonClick(button.key)">
     <mat-icon [svgIcon]="button.svgIcon"></mat-icon>
-    {{ button.text }}
+    <span>{{ button.text }}</span>
 </button>
