--- a/projects/auth/src/lib/guest-start/social-buttons/social-buttons.component.scss
+++ b/projects/auth/src/lib/guest-start/social-buttons/social-buttons.component.scss
@@ -1,4 +1,3 @@
-// @todo: update color for each button
-.no-hover-effect.mat-button.mat-primary .mat-button-focus-overlay {
-    background-color: red;
+mat-icon {
+    margin-right: 8px;
 }
