--- a/projects/auth/src/lib/guest-start/login/login.component.html
+++ b/projects/auth/src/lib/guest-start/login/login.component.html
@@ -5,7 +5,7 @@
     <div fxLayout="row" fxLayoutAlign="center start">
         <div fxFlex="80" fxFlex.xs="100" fxLayout="column">
             <auth-formly-form-flex (change)="updateForm($event)" [form]="form" [fields]="fields" [model]="model" fxLayout="column" class="width-100"></auth-formly-form-flex>
-            <div fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="16px">
+            <div class="width-100" fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="16px">
                 <jam-submit
                     class="width-100"
                     submitLabel="Entrar"
@@ -21,6 +21,14 @@
                     >
                     ¿Olvidó su contraseña?
                 </a>
+                <auth-social-buttons
+                    class="width-100"
+                    fxLayout="column"
+                    fxLayoutGap="16px"
+                    [socialButtons]="social_buttons"
+                    (buttonClick)="socialLogin($event)"
+                    >
+                </auth-social-buttons>
             </div>
         </div>
     </div>
