--- a/projects/auth/src/lib/guest-start/guest-start.component.html
+++ b/projects/auth/src/lib/guest-start/guest-start.component.html
@@ -1,17 +1,12 @@
-<div fxLayout="row" fxLayoutAlign.gt-sm="center center" fxLaoyutAlign.lt-md="center start" class="width-100 height-100">
-    <div
-        fxFlex.gt-sm="500px"
-        fxFlex.lt.md="100"
-        fxLayout.sm="column"
-        fxLayoutAlign.lt-md="start stretch"
-        class="mobile-full-screen width-100"
-        [ngClass]="!mediaObserver.isActive('xs') && !mediaObserver.isActive('xs') ? 'mat-elevation-z2' : ''"
-        >
+<div style="background-color: red;" class="width-100 guest-start-container">
+    <div class="tab-group-container">
         <mat-tab-group
             headerPosition="below"
             mat-stretch-tabs
             class="background-white tab-header-bottom"
             jamTabs
+            [ngClass]="!notShadow ? 'mat-elevation-z2' : ''"
+            color="primary"
             [tabNames]="tab_names"
             [tabGroup]="tabGroup"
             dynamicHeight
