--- a/projects/auth/src/lib/guest-start/guest-start.component.scss
+++ b/projects/auth/src/lib/guest-start/guest-start.component.scss
@@ -1,9 +1,12 @@
 ::ng-deep mat-tab-group {
     width: 100% !important;
+
 }
 
 ::ng-deep .mat-tab-body-content {
     overflow: auto !important;
+    padding: 24px;
+    box-sizing: border-box;
 }
 
 ::ng-deep .mat-tab-body-wrapper {
@@ -15,8 +18,40 @@
     white-space: normal !important;
 }
 
+.guest-start-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    position: relative;
+}
+
+.guest-start-container::before,
+.guest-start-container::after {
+    content: '';
+    display: block;
+    -webkit-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex-grow: 1;
+    flex-grow: 1;
+    height: 24px;
+    min-height: 30px;
+}
+
 .width-100 {
     width: 100%;
+}
+
+.tab-group-container {
+    max-width: 500px;
+    width: 100%;
+    padding: 24px;
+    box-sizing: border-box;
+    min-height: 0;
+    margin: 0 auto;
+}
+
+.background-white {
+    background-color: white;
 }
 
 @media only screen and (max-width: 600px) {
