--- a/projects/auth/src/lib/guest-start/login/login.component.scss
+++ b/projects/auth/src/lib/guest-start/login/login.component.scss
@@ -8,6 +8,16 @@ a:hover {
     color: $login-link;
 }
 
+.image-guest-start-container {
+    padding: 24px;
+    box-sizing: border-box;
+    height: auto;
+}
+
+.image-guest-start-container img {
+    width: 200px;
+}
+
 @media only screen and (max-width: 600px) {
     .mobile-full-screen {
         height: 100%;
