--- a/projects/auth/src/lib/forgot-password/forgot-password.component.html
+++ b/projects/auth/src/lib/forgot-password/forgot-password.component.html
@@ -1,15 +1,15 @@
-<div fxLayout="row" fxLayoutAlign="center center" class="width-100 height-100">
-    <div class="background-white mobile-full-screen mat-elevation-z2" style="padding: 80px" fxLayout="row" fxLayoutAlign="center center">
-        <form [formGroup]="forgotPassForm" (ngSubmit)="sendEmail()" fxLayout="column" fxFlex="80" fxFlex.xs="100" fxLayoutAlign="space-around stretch">
-            <div fxLayout="row" fxLayoutAlign="center center" style="margin-bottom: 50px">
-                <img [src]="forgotPasswordService.authConfig.main_image_url" [style.width.%]="!mediaObserver.isActive('xs') ? 70 : 100">
+<div fxLayout="row" fxLayoutAlign="center center" class="width-100 height-100 forgot-pass-container">
+    <mat-card class="forgot-form-container">
+        <form [formGroup]="forgotPassForm" (ngSubmit)="sendEmail()" fxLayout="column" fxFlex="100" fxLayoutAlign="space-around stretch">
+            <div fxLayout="row" fxLayoutAlign="center center" class="width-100 image-guest-start-container">
+                <img [src]="forgotPasswordService.authConfig.main_image_url">
             </div>
             <div fxLayout="column" fxLayoutAlign="stretch center">
                 <span class="mat-headline text-center">¿Has olvidado tu contraseña?</span>
                 <span class="mat-body-1 text-center">Proporciona información adicional para agilizar el proceso de recuperación.</span>
             </div>
             <br>
-            <mat-form-field name="myForm" novalidate submit-validate method="post" class="form-validation mobile-full-screen" style="width: auto">
+            <mat-form-field name="myForm" novalidate submit-validate method="post" appearance="outline">
                 <div rs-validate="companyConfig.contracts.name" class="width-100">
                     <input
                     name="email"
@@ -24,9 +24,9 @@
                 <mat-error *ngIf="forgotPassForm.controls.email.invalid">Correo no válido</mat-error>
             </mat-form-field>
             <div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="8px">
-                <button mat-button name="cancel" color="accent" (click)="cancel()">Cancelar</button>
+                <button mat-button name="cancel" color="primary" (click)="cancel()">Cancelar</button>
                 <button mat-raised-button type="submit" color="primary" name="submit">Enviar</button>
             </div>
         </form>
-    </div>
+      </mat-card>
 </div>
