--- a/projects/auth/src/lib/guest-start/guest-start.component.html
+++ b/projects/auth/src/lib/guest-start/guest-start.component.html
@@ -1,11 +1,10 @@
-<div style="background-color: red;" class="width-100 guest-start-container">
+<div class="width-100 guest-start-container">
     <div class="tab-group-container">
         <mat-tab-group
             headerPosition="below"
             mat-stretch-tabs
-            class="background-white tab-header-bottom"
+            class="background-white tab-header-bottom mat-elevation-z2"
             jamTabs
-            [ngClass]="!notShadow ? 'mat-elevation-z2' : ''"
             color="primary"
             [tabNames]="tab_names"
             [tabGroup]="tabGroup"
