--- a/projects/auth/src/lib/guest-start/login/login.component.html
+++ b/projects/auth/src/lib/guest-start/login/login.component.html
@@ -18,6 +18,7 @@
                     [routerLink]="guestStartService.authConfig.routes.forgot_password.route"
                     [queryParams]="guestStartService.authConfig.routes.forgot_password.query_params || {}"
                     style="text-transform: none" class="md-body-1"
+                    [ngClass]="guestStartService.authConfig.forgot_password_link_class"
                     >
                     ¿Olvidó su contraseña?
                 </a>
