--- a/projects/auth/src/lib/forgot-password/forgot-password.component.scss
+++ b/projects/auth/src/lib/forgot-password/forgot-password.component.scss
@@ -1,11 +1,50 @@
-$white: #fff;
-
-@media only screen and (max-width: 600px) {
-    .mobile-full-screen {
-        height: 100%;
-    }
-}
-
 .background-white {
-    background-color: $white; // (!important): Para pisar tonos grises que tiene material en algunos components...
+    background-color: white;
 }
+
+.forgot-form-container {
+    max-width: 500px;
+    box-sizing: border-box;
+    padding: 24px;
+}
+
+.forgot-pass-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  position: relative;
+
+  @media (min-width: 400px) {
+    padding: 24px;
+  }
+}
+
+@media (min-width: 400px) {
+.forgot-pass-container::before,
+.forgot-pass-container::after {
+    content: '';
+    display: block;
+    -webkit-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex-grow: 1;
+    flex-grow: 1;
+    height: 24px;
+    min-height: 30px;
+}
+}
+
+.image-guest-start-container {
+  padding: 24px;
+  box-sizing: border-box;
+  height: auto;
+}
+
+.image-guest-start-container img {
+  width: 200px;
+}
+
+.width-100 {
+    width: 100%;
+}
+
+
