--- a/projects/auth/src/lib/guest-start/login/login.component.scss
+++ b/projects/auth/src/lib/guest-start/login/login.component.scss
@@ -18,6 +18,10 @@ a:hover {
     width: 200px;
 }
 
+.width-100 {
+  width: 100%;
+}
+
 @media only screen and (max-width: 600px) {
     .mobile-full-screen {
         height: 100%;
