--- a/projects/auth/src/lib/guest-start/login/login.component.html
+++ b/projects/auth/src/lib/guest-start/login/login.component.html
@@ -1,9 +1,9 @@
-<form fxLayout="column" fxLayoutAlign="space-around stretch" (ngSubmit)="goLogin()" [formGroup]="form" style="padding: 40px 0">
-    <div fxLayout="row" fxLayoutAlign="center center" class="width-100" style="margin-bottom: 50px">
-        <img [src]="guestStartService.authConfig.main_image_url" [style.width.%]="!mediaObserver.isActive('xs') ? 70 : 100">
+<form fxLayout="column" fxLayoutAlign="space-around stretch" (ngSubmit)="goLogin()" [formGroup]="form">
+    <div fxLayout="row" fxLayoutAlign="center center" class="width-100 image-guest-start-container">
+        <img [src]="guestStartService.authConfig.main_image_url">
     </div>
     <div fxLayout="row" fxLayoutAlign="center start">
-        <div fxFlex="80" fxFlex.xs="100" fxLayout="column">
+        <div fxFlex="100" fxLayout="column">
             <auth-formly-form-flex (change)="updateForm($event)" [form]="form" [fields]="fields" [model]="model" fxLayout="column" class="width-100"></auth-formly-form-flex>
             <div class="width-100" fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="16px">
                 <jam-submit
@@ -18,6 +18,7 @@
                     [routerLink]="guestStartService.authConfig.routes.forgot_password.route"
                     [queryParams]="guestStartService.authConfig.routes.forgot_password.query_params || {}"
                     style="text-transform: none" class="md-body-1"
+                    [ngClass]="guestStartService.authConfig.forgot_password_link_class"
                     >
                     ¿Olvidó su contraseña?
                 </a>
