--- a/projects/auth/src/lib/reset-password/reset-password.component.html
+++ b/projects/auth/src/lib/reset-password/reset-password.component.html
@@ -1,12 +1,12 @@
-<div fxLayout="row" fxLayoutAlign="center center" class="width-100 height-100">
-    <div class="mobile-full-screen mat-elevation-z2" style=" padding: 80px" fxLayout="row" fxLayoutAlign="center center">
-        <form name="resetPassForm" [formGroup]="resetPassForm" (ngSubmit)="sendResetPassword()" fxLayout="column" fxFlex="80" fxFlex.xs="100" fxLayoutAlign="space-around stretch">
-            <div fxLayout="row" fxLayoutAlign="center center" style="margin-bottom: 50px">
+<div fxLayout="row" fxLayoutAlign="center center" class="width-100 height-100 reset-pass-container">
+    <mat-card class="reset-form-container">
+        <form name="resetPassForm" [formGroup]="resetPassForm" (ngSubmit)="sendResetPassword()" fxLayout="column" fxFlex="100" fxLayoutAlign="space-around stretch">
+            <div fxLayout="row" fxLayoutAlign="center center" class="width-100 image-guest-start-container">
                 <img [src]="resetPasswordService.authConfig.main_image_url">
             </div>
             <span class="mat-title text-center">¿Vamos a crear tu nueva contraseña?</span>
-            <div fxLayout="column" fxLayoutAlign="center center">
-                <mat-form-field fxFlex.gt.xs rs-validate="contracts.name">
+            <div fxLayout="column">
+                <mat-form-field fxFlex.gt.xs rs-validate="contracts.name" appearance="outline">
                     <input
                         required
                         autofocus
@@ -18,7 +18,7 @@
                         >
                     <mat-error *ngIf="resetPassForm.controls.password.invalid">La contraseña debe contene al menos 4 caracteres</mat-error>
                 </mat-form-field>
-                <mat-form-field fxFlex.gt.xs rs-validate="contracts.name">
+                <mat-form-field fxFlex.gt.xs rs-validate="contracts.name" appearance="outline">
                     <input
                         required
                         matInput
@@ -30,7 +30,7 @@
                     <mat-error *ngIf="resetPassForm.controls.repeatPassword.invalid">Las contraseñas no coinciden</mat-error>
                 </mat-form-field>
             </div>
-            <jam-submit cancelState="/login" submitLabel="Enviar"></jam-submit>
+            <jam-submit [ngClass]="guestStartService.authConfig.class_actions_button" cancelState="{{guestStartService.authConfig.routes.login}" submitLabel="Enviar"></jam-submit>
         </form>
-    </div>
+      </mat-card>
 </div>
