FE-ver-boton-cancelar auto-commit

--- a/projects/auth/src/lib/forgot-password/forgot-password.component.html
+++ b/projects/auth/src/lib/forgot-password/forgot-password.component.html
@@ -23,7 +23,7 @@
                 </div>
                 <mat-error *ngIf="forgotPassForm.controls.email.invalid">Correo no válido</mat-error>
             </mat-form-field>
-            <jam-submit [ngClass]="guestStartService.authConfig.class_actions_button" cancelState="{{guestStartService.authConfig.routes.login}" submitLabel="Enviar"></jam-submit>
+            <jam-submit [ngClass]="guestStartService.authConfig.class_actions_button" (cancel)="cancel()" submitLabel="Enviar"></jam-submit>
         </form>
       </mat-card>
 </div>
