FE-234-crear-componente-message auto-commit

--- a/projects/auth/src/lib/forgot-password/forgot-password.component.html
+++ b/projects/auth/src/lib/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="center center" class="width-100 auth-wrapper">
-    <mat-card class="forgot-form-container">
+    <mat-card class="mat-card-style">
         <form [formGroup]="forgotPassForm" (ngSubmit)="sendEmail()" fxLayout="column" fxFlex="100" fxLayoutAlign="space-around stretch">
             <div fxLayout="row" fxLayoutAlign="center center" class="width-100 main-image-url-container">
                 <img [src]="forgotPasswordService.authConfig.main_image_url">
