--- a/projects/auth/src/lib/reset-password/reset-password.component.html
+++ b/projects/auth/src/lib/reset-password/reset-password.component.html
@@ -1,7 +1,7 @@
-<div fxLayout="row" fxLayoutAlign="center center" class="width-100 height-100 reset-pass-container">
-    <mat-card class="reset-form-container">
+<div fxLayout="row" fxLayoutAlign="center center" class="width-100 height-100 auth-wrapper">
+    <mat-card class="mat-card-style">
         <form name="resetPassForm" [formGroup]="resetPassForm" (ngSubmit)="sendResetPassword()" fxLayout="column" fxFlex="100" fxLayoutAlign="space-around stretch">
-            <div fxLayout="row" fxLayoutAlign="center center" class="width-100 image-guest-start-container">
+            <div fxLayout="row" fxLayoutAlign="center center" class="width-100 main-image-url-container">
                 <img [src]="resetPasswordService.authConfig.main_image_url">
             </div>
             <span class="mat-title text-center">¿Vamos a crear tu nueva contraseña?</span>
