--- a/projects/auth/src/lib/assets/_styles.scss
+++ b/projects/auth/src/lib/assets/_styles.scss
@@ -11,11 +11,11 @@
 .auth-wrapper {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
     position: relative;
 
     @media (min-width: 400px) {
         padding: 24px;
+        min-height: 100vh;
     }
 }
 
@@ -42,7 +42,16 @@
 }
 
 .mat-card-style {
-  max-width: 500px;
-  box-sizing: border-box;
-  padding: 24px;
+    max-width: 500px;
+    width: 100%;
+    box-sizing: border-box;
+    min-height: 550px;
+    height: 100vh;
+    margin: 0 auto;
+
+    @media (min-width: 400px) {
+        padding: 24px;
+        min-height: 100%;
+        height: 100%;
+    }
 }
