--- a/projects/auth/src/lib/guest-start/guest-start.component.scss
+++ b/projects/auth/src/lib/guest-start/guest-start.component.scss
@@ -1,8 +1,12 @@
 @import '../assets/styles';
 
+/* prettier-ignore */
+$box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+
 ::ng-deep mat-tab-group {
     width: 100% !important;
     border-radius: 4px;
+    box-shadow: $box-shadow;
 }
 
 ::ng-deep .mat-tab-body-content {
@@ -36,4 +40,14 @@
     .mobile-full-screen {
         height: 100%;
     }
+}
+
+::ng-deep .mat-tab-header {
+    /* prettier-ignore */
+    border-top: 1px solid  rgba(0,0,0,.12) !important;
+    border-bottom: none !important;
+}
+
+::ng-deep .mat-tab-label.mat-tab-label-active {
+    box-shadow: $box-shadow;
 }
