--- a/projects/auth/src/lib/guest-start/login/login.component.scss
+++ b/projects/auth/src/lib/guest-start/login/login.component.scss
@@ -2,6 +2,10 @@
     width: 100%;
 }
 
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-infix {
+    padding: 0.6em 0 1em 0;
+}
+
 .image-guest-start-container {
     padding: 24px;
     box-sizing: border-box;
