--- a/projects/auth/src/lib/guest-start/sign-up/sign-up.component.html
+++ b/projects/auth/src/lib/guest-start/sign-up/sign-up.component.html
@@ -1,28 +1,42 @@
-<form fxLayout="column" fxLayoutAlign="space-around stretch" (ngSubmit)="registerUser()">
+<form fxLayout="column" fxLayoutAlign="space-around stretch" (ngSubmit)="registerUser()" [formGroup]="form">
     <div fxLayout="row" fxLayoutAlign="center center" class="width-100 image-guest-start-container">
         <img [src]="guestStartService.authConfig.main_image_url">
     </div>
     <div fxLayout="row" fxLayoutAlign="center start">
         <div fxFlex="100">
-            <auth-formly-form-flex [form]="form" [fields]="fields" [model]="model" fxLayout="column" class="width-100"></auth-formly-form-flex>
-            <mat-checkbox
-                matInput
-                required
-                *ngIf="guestStartService.authConfig.need_conditions"
-                name="conditions"
-                aria-label="Acepto los terminos y condiciones"
-                [(ngModel)]="accepted_conditions"
-                class="shorten">
-                <label style="word-wrap: break-word; white-space: normal;">Estoy de acuerdo con todos los
-                <a href="#">términos y condiciones del servicio.</a></label>
-            </mat-checkbox>
+            <mat-form-field appearance="outline" style="width: 100%;">
+                <mat-label>Nombre</mat-label>
+                <input matInput placeholder="Nombre" [formControl]="form.controls.first_name" required>
+                <mat-error *ngIf="form.controls.first_name.invalid">{{validateText()}}</mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 100%;">
+                <mat-label>Apellido</mat-label>
+                <input matInput placeholder="Apellido"  [formControl]="form.controls.last_name"required>
+                <mat-error *ngIf="form.controls.last_name.invalid">{{validateText()}}</mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 100%;">
+                <mat-label>Correo electrónico</mat-label>
+                <input matInput placeholder="Correo electrónico" [formControl]="form.controls.email" required>
+                <mat-error *ngIf="form.controls.email.invalid">{{validateEmail()}}</mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 100%;">
+                <mat-label>Contraseña</mat-label>
+                <input matInput placeholder="Contraseña" [formControl]="form.controls.password" type="password" required>
+                <mat-error *ngIf="form.controls.password.invalid">{{validatePassword()}}</mat-error>
+            </mat-form-field>
+
+            <mat-chip-list class="pill-list">
+                <mat-chip color="{{ !haveCapitalLetter ? 'warn' : 'primary' }}" selected>1 mayúscula</mat-chip>
+                <mat-chip color="{{ !haveNumeric ? 'warn' : 'primary' }}" selected>1 número</mat-chip>
+                <mat-chip color="{{ this.form.controls.password.hasError('required') || this.form.controls.password.hasError('minlength') ? 'warn' : 'primary' }}" selected>Mín. 8 caracteres</mat-chip>
+            </mat-chip-list>
+            
+            <mat-form-field appearance="outline" style="width: 100%;">
+                <mat-label>Repetir contraseña</mat-label>
+                <input matInput placeholder="Repetir contraseña" [formControl]="form.controls.confirm_password" type="password" required>
+            </mat-form-field>
             <div fxLayout="column">
-                <!-- @todo: agregar loading -->
-                <jam-submit class="width-100"
-                    submitLabel="Registrarse ahora" submitAppearance="mat-flat-button"
-                    [noCancel]="true"
-                    [disabled]="!(this.form.valid && this.form.touched)"
-                ></jam-submit>
+                <button mat-raised-button color="primary" type="submit" [disabled]="form.status === 'INVALID'">Registrarse ahora</button>
             </div>
         </div>
     </div>
